tests/error/gack_decl2.gw
// [contains] can't declare after expression
 <<< 0, int i >>>;
